--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,9 @@
     },
     "idf.espIdfPathWin": "C:\\Users\\Sebi\\esp\\esp-idf",
     "idf.openOcdConfigs": [
-        "board/esp32-wrover-kit-3.3v.cfg"
+        "board/esp32-bridge.cfg"
     ],
+    "idf.portWin": "COM7",
     "idf.pythonBinPathWin": "C:\\Users\\Sebi\\.espressif\\python_env\\idf5.0_py3.11_env\\Scripts\\python.exe",
     "idf.toolsPathWin": "C:\\Users\\Sebi\\.espressif"
 }
