--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "camera.c" "app_main.c" "mqtt.c" "wifi.c"
-                    INCLUDE_DIRS ".")
+                    INCLUDE_DIRS "."
+                    PRIV_REQUIRES cdm324)
 #target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
